package UserBasicInfo;

//社区向智能推荐系统同步用户基础信息
message SyncBasicInfo {
    required int64 uid           = 1;   //用户飞信内部ID
    optional int32 birth_year    = 2;   //出生年
    optional int32 birth_month   = 3;   //出生月
    optional int32 birth_day     = 4;   //出生日
    optional int32 constellation = 5;   //星座
    optional int32 blood_types   = 6;   //血型。0：未知；1：A；2：B；3：AB；4：O。
    optional int32 sex           = 7;   //性别。0：未知；1：男；2：女。
    optional string home_nation  = 8;   //家乡所在国家
    optional string home_pro     = 9;   //家乡所在省
    optional string home_city    = 10;  //家乡所在城市
    optional string now_nation   = 11;  //现居住国家
    optional string now_pro      = 12;  //现居住省
    optional string now_city     = 13;  //现居住城市
}
